2007-03-28  Georg von Hippel <gmv22@cantab.net>

	* Started to repair the FeynML module
	* Fixed a bug in lines.py (never use == or != with None, use is/is not
	  instead).

2007-03-18  Andy Buckley  <andy@insectnation.org>

	* Added layer-based sorting of the object list before drawing, and
	a get/setDepth() method via the Visible interface.

	* Tidied up a bit: inparticular, removed a mutual dependence bug
	between the deco and points modules.

2007-03-07  Andy Buckley  <andy@insectnation.org>

	* Added point-attached labels.

	* Added unattached label implementation and updated example 1 to
	demonstrate it.

2007-03-05  Andy Buckley  <andy@insectnation.org>

	* Moved Label to LineLabel and introduced placeholders for Label
	and PointLabel.

2007-02-09  Andy Buckley  <andy@insectnation.org>

	* Added Vector and Scalar/Higgs line types.

2006-12-29  Andy Buckley  <andy@insectnation.org>

	* Added a fix to the Point.arc method to deal with the sign
	ambiguity when the end points are purely vertically separated.

2006-12-23  Andy Buckley  <andy@insectnation.org>

	* Added distutils setup.py installation script.

	* Moved various files into pyfeyn modules, examples and tests
	directories.

	* Rehacked the module import structure a bit more to get epydoc to
	treat the modules as public (as it should).

2006-12-22  Andy Buckley  <andy@insectnation.org>

	* Removed feyn module and added initialisation stuff to
	__init__.py

2006-12-21  Andy Buckley  <andy@insectnation.org>

	* Made logo.

	* Added 4x scaling to get output resolution more reasonable.

	* Removed explicit units dependencies in the coil deformer and
	label displacement code.

2006-12-20  Andy Buckley  <andy@insectnation.org>

	* Changed number of curves per half-loop to get nicer gluons and
	photons.

	* Added test1 program (e+ e- -> q q~).
	
        * Various other interface hacks... too many changes this evening
	to remember them all!
	
	* Changed bend() to use a displacement which is always on the left